特性: UI 控件与扫描控制器状态机同步

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,8 +9,8 @@ set(CMAKE_AUTORCC ON)
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
-find_package(QT NAMES Qt6 Qt5 REQUIRED COMPONENTS Widgets)
-find_package(Qt${QT_VERSION_MAJOR} REQUIRED COMPONENTS Widgets)
+find_package(QT NAMES Qt6 Qt5 REQUIRED COMPONENTS Widgets StateMachine)
+find_package(Qt${QT_VERSION_MAJOR} REQUIRED COMPONENTS Widgets StateMachine)
 
 set(PROJECT_SOURCES
         src/main.cpp
@@ -63,7 +63,7 @@ else()
     endif()
 endif()
 
-target_link_libraries(NewCTScanner PRIVATE Qt${QT_VERSION_MAJOR}::Widgets)
+target_link_libraries(NewCTScanner PRIVATE Qt${QT_VERSION_MAJOR}::Widgets  Qt${QT_VERSION_MAJOR}::StateMachine)
 
 target_include_directories(NewCTScanner PRIVATE
     "${CMAKE_CURRENT_SOURCE_DIR}/src"
