特性: 实现多线程与状态机的核心架构 建立了分层目录结构 (UI, CORE, HAL)。
将核心逻辑迁移至工作线程，以确保用户界面 (UI) 的响应性。

引入 QStateMachine 来管理扫描流程 (空闲、准备中、扫描中)。

实现了用于设置扫描参数 (千伏 [kV]、微安 [uA]) 的 UI，并将参数传递给核心逻辑层。

使 UI 按钮状态与状态机的当前状态保持同步。

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -30,13 +30,23 @@ set(CORE_SOURCES
 set(HAL_HEADERS
         src/hal/IXRaySource.h
         src/hal/DummySource.h
+        src/hal/dummysource.cpp
+
+)
+set(COMMON_FILES
+    src/common/ScanParameters.h
 )
 
 
 
 list(APPEND PROJECT_SOURCES ${UI_SOURCES})
 list(APPEND PROJECT_SOURCES ${CORE_SOURCES})
-
+list(APPEND PROJECT_SOURCES
+    ${UI_FILES}
+    ${CORE_FILES}
+    ${HAL_FILES}
+    ${COMMON_FILES}
+)
 if(${QT_VERSION_MAJOR} GREATER_EQUAL 6)
     qt_add_executable(NewCTScanner
         MANUAL_FINALIZATION
