特性(重建): 添加异步图像重建框架 实现了专用于 CT 图像重建的独立模块。重建过程在单独的线程中运行，以确保在计算密集型操作期间 UI 保持响应。
此提交为将来集成真实的重建算法（如 FBP、ITK、CUDA）建立了完整的架构流水线。

关键变更:
ReconstructionController 类:

在核心层引入新的 ReconstructionController 类，封装所有重建逻辑。

该控制器由 ScanController 管理，并在其专用的 QThread (m_reconThread) 中运行。

异步工作流程:

重建过程在扫描完成后，通过 ScanController 的 onAcquisitionFinished 槽函数自动触发。

将输入数据路径传递给 ReconstructionController 开始处理。

所有线程间的通信都通过 Qt 的信号与槽机制 (QMetaObject::invokeMethod) 安全地处理。

UI 集成:

在 MainWindow 中添加了一个 QLabel (m_reconDisplayLabel) 用于显示最终重建的切片图像。

添加了一个 QProgressBar (m_reconProgressBar) 用于提供重建进度的实时反馈。

UI 通过连接到 ScanController 的新信号/槽（reconstructionStarted、
reconstructionProgress、reconstructionFinished）来更新。

模拟验证:

重建算法目前通过 5 秒延迟和增量进度更新进行模拟，以验证多线程架构和 UI 反馈回路的正确性。

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -24,6 +24,8 @@ set(UI_SOURCES
 set(CORE_SOURCES
         src/core/scancontroller.cpp
         src/core/scancontroller.h
+        src/core/reconstructioncontroller.cpp
+        src/core/reconstructioncontroller.h
 )
 
 
@@ -54,6 +56,10 @@ if(${QT_VERSION_MAJOR} GREATER_EQUAL 6)
         src/core/scancontroller.h src/core/scancontroller.cpp
         src/hal/IXRaySource.h
         src/hal/dummysource.h src/hal/dummysource.cpp
+        src/common/logger.h src/common/logger.cpp
+        src/core/datasaver.h src/core/datasaver.cpp
+        src/core/configmanager.h src/core/configmanager.cpp
+        src/core/reconstructioncontroller.h src/core/reconstructioncontroller.cpp
     )
 # Define target properties for Android with Qt 6 as:
 #    set_property(TARGET NewCTScanner APPEND PROPERTY QT_ANDROID_PACKAGE_SOURCE_DIR
