重构(arch): 实现基于CoreFacade的服务层架构
本次重构实现了设计方案中提出的面向服务架构，旨在提升代码的模块化、可测试性和线程安全性。

主要变更:

- 引入CoreFacade: 新增 CoreFacade 单例作为所有核心服务的统一所有者和访问入口，充当中心协调者。
- 建立服务层: 创建了 DataAcquisitionService(数据采集服务) 并增强了HardwareService (硬件服务)，明
确了服务职责。
- 简化控制器: 重构了 ScanController，使其成为纯粹的流程协调器。它不再负责创建或管理依赖，而是通过线程安全的信号槽与其他服务通
信。
- 集中生命周期管理: 将所有核心服务 (HardwareService, DataAcquisitionService,
ConfigManager, ReconstructionController) 的生命周期统一由 CoreFacade 管理。
- 解决线程问题: 彻底解决了启动时的竞态条件和崩溃问题，确保了工作线程与主线程之间的通信既健壮又安全。

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,6 +19,10 @@ set(UI_FILES
 )
 
 set(CORE_FILES
+    src/core/dataacquisitionservice.h
+    src/core/dataacquisitionservice.cpp
+    src/core/corefacade.h
+    src/core/corefacade.cpp
     src/core/configmanager.h
     src/core/configmanager.cpp
     src/core/datasaver.h
