feat(arch): 引入状态驱动架构，实现UI与硬件状态解耦
本次提交对软件架构进行了重构，引入了状态驱动的设计模式，以取代原有的事件驱动UI更新机制，旨在实现UI层与核心服务层的深度解耦。

主要变更如下:

1.  定义标准状态模型:
    新增 `src/common/HardwareStatus.h` 文件，定义了 `XRaySourceStatus`,
`MotionStageStatus`, `DetectorStatus` 等硬件状态结构体，以及聚合所有状态的 `SystemStatus`。
    通过 `qRegisterMetaType` 注册了所有状态结构体，使其可以在Qt信号槽中安全传递。

2.  改造硬件抽象层 (HAL):
    为 `IXRaySource`, `IMotionStage`, `IDetector` 硬件接口统一添加了
`statusChanged` 信号，用于向外广播自身状态的变更。
    更新了 `Dummy...` 系列硬件实现，使其内部能够跟踪自身状态（如连接状态、电压、位置等），并在状态变化时发出
`statusChanged` 信号。

3.  升级核心服务层:
    重构了 `HardwareService`，使其成为状态聚合中心。该服务现在会订阅所有硬件的 `statusChanged` 信号。
    `HardwareService` 在接收到任何硬件的状态更新后，会将其聚合成一个完整的 `SystemStatus` 对象，并通过新的
`systemStatusUpdated` 信号统一向外广播。

4.  重构UI层:
    `MainWindow` 不再直接响应零散的硬件事件，而是改为订阅 `HardwareService` 的
`systemStatusUpdated` 信号。
    新增 `onSystemStatusUpdated` 槽函数，将所有与硬件状态相关的UI控件更新逻辑集中处理，极大地简化了UI层的代码。

此次重构显著提升了代码的模块化和可维护性。UI层不再需要关心底层硬件的具体实现，只需响应一个统一的状态模型即可，为未来功能的扩展和维护奠定了坚实
的基础。

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -53,6 +53,8 @@ set(COMMON_FILES
     src/common/logger.h
     src/common/logger.cpp
     src/common/ScanParameters.h
+    src/common/HardwareStatus.h
+
 )
 
 set(PROJECT_SOURCES
@@ -69,7 +71,6 @@ if(${QT_VERSION_MAJOR} GREATER_EQUAL 6)
     qt_add_executable(NewCTScanner
         MANUAL_FINALIZATION
         ${PROJECT_SOURCES}
-
     )
 else()
     add_executable(NewCTScanner ${PROJECT_SOURCES})
