refactor(core): 使用生产者-消费者模型重构数据采集模块
- 引入生产者(AcquisitionWorker)和消费者(DataSaver)线程，实现采集与保存的解耦。
- 新增FrameBuffer作为线程安全的环形缓冲区，用于平衡数据流并防止帧丢失。
- DataAcquisitionService现在负责管理整个采集流水线。
- 简化ScanController，使其专注于状态管理和任务分派。

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -35,6 +35,11 @@ set(CORE_FILES
     src/core/scancontroller.cpp
     src/core/reconstructiontask.h
     src/core/reconstructiontask.cpp
+    src/core/Frame.h
+    src/core/framebuffer.h
+    src/core/framebuffer.cpp
+    src/core/acquisitionworker.h
+    src/core/acquisitionworker.cpp
 )
 
 set(HAL_FILES
@@ -71,6 +76,7 @@ if(${QT_VERSION_MAJOR} GREATER_EQUAL 6)
     qt_add_executable(NewCTScanner
         MANUAL_FINALIZATION
         ${PROJECT_SOURCES}
+
     )
 else()
     add_executable(NewCTScanner ${PROJECT_SOURCES})
