feat(core): 实现完整的扫描控制架构
根据设计方案，对扫描控制系统进行了全面的重构和功能实现。

新增 SystemSafetyService 用于处理紧急安全事件（如舱门联锁）。

扩展 ScanParameters 和 ScanProgress 数据模型，提供更丰富的扫描配置与进度反馈。

实现扫描流程的暂停、恢复及参数验证功能。

优化X射线控制逻辑，改为按需开关模式，提高安全性。

修复了多线程调用和信号/槽连接相关的多个编译及运行时问题。

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -40,6 +40,8 @@ set(CORE_FILES
     src/core/framebuffer.cpp
     src/core/acquisitionworker.h
     src/core/acquisitionworker.cpp
+    src/core/systemsafetyservice.h
+     src/core/systemsafetyservice.cpp
 )
 
 set(HAL_FILES
@@ -59,6 +61,7 @@ set(COMMON_FILES
     src/common/logger.cpp
     src/common/ScanParameters.h
     src/common/HardwareStatus.h
+    src/common/ScanProgress.h # <-- 将新文件添加在这里
 
 )
 
@@ -76,6 +79,8 @@ if(${QT_VERSION_MAJOR} GREATER_EQUAL 6)
     qt_add_executable(NewCTScanner
         MANUAL_FINALIZATION
         ${PROJECT_SOURCES}
+        src/common/ScanProgress.h
+        src/core/systemsafetyservice.h src/core/systemsafetyservice.cpp
 
     )
 else()
